--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/vuetify": "^1.2.2",
+    "axios": "^0.19.0",
     "nuxt": "^2.8.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuetify": "^2.0.7"
   }
 }
